--- a/src/main/resources/MainScene.fxml
+++ b/src/main/resources/MainScene.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
-
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.Label?>
-<AnchorPane prefHeight="755.0" prefWidth="1082.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
+<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.layout.AnchorPane?>
+<AnchorPane prefHeight="755.0" prefWidth="1082.0" xmlns="http://javafx.com/javafx/8.0.121"
+            xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <TextArea fx:id="eventTextField" layoutX="482.0" layoutY="419.0" prefHeight="136.0" prefWidth="200.0" />
-        <Label layoutX="482.0" layoutY="402.0" text="События" />
-        <Button fx:id="testButton" layoutX="134.0" layoutY="94.0" mnemonicParsing="false" text="Привет" />
+        <TextArea fx:id="eventTextField" layoutX="482.0" layoutY="419.0" prefHeight="136.0" prefWidth="200.0"/>
+        <Label layoutX="482.0" layoutY="402.0" text="События"/>
+        <Button fx:id="testButton" layoutX="134.0" layoutY="94.0" mnemonicParsing="false" text="Привет"/>
+        <LineChart fx:id="lineChart">
+            <xAxis>
+                <NumberAxis fx:id="xAxis" side="BOTTOM"/>
+            </xAxis>
+            <yAxis>
+                <NumberAxis fx:id="yAxis" side="LEFT"/>
+            </yAxis>
+        </LineChart>
     </children>
 </AnchorPane>
