--- a/src/main/resources/model/Model.fxml
+++ b/src/main/resources/model/Model.fxml
@@ -1,38 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXMasonryPane?>
-<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.*?>
+<?import com.jfoenix.validation.NumberValidator?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.chart.LineChart?>
 <?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.*?>
 <?import java.net.URL?>
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.butilov.mathmodel.model.MathModelController"
-            prefHeight="400.0" prefWidth="600.0">
-    <BorderPane prefHeight="600.0" prefWidth="1000" xmlns="http://javafx.com/javafx/8.0.121"
-                xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.121"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.butilov.mathmodel.model.MathModelController">
+    <BorderPane prefHeight="600.0" prefWidth="1000.0">
         <stylesheets>
             <URL value="@../base.css"/>
         </stylesheets>
         <left>
-            <JFXMasonryPane prefHeight="400.0" prefWidth="250.0">
+            <JFXMasonryPane prefHeight="150.0" prefWidth="300.0">
                 <VBox styleClass="card">
                     <StackPane styleClass="header" VBox.vgrow="ALWAYS">
                         <Label text="Параметры"/>
                     </StackPane>
-                    <StackPane styleClass="body">
-                        <VBox spacing="10">
-                            <Label text="События"/>
-                            <JFXTextArea fx:id="eventTextField" layoutX="10.0" layoutY="10.0"
-                                         prefHeight="136.0"
-                                         prefWidth="190.0"/>
-                            <JFXButton styleClass="action-button" fx:id="testButton" mnemonicParsing="false"
-                                       text="Привет"/>
-                        </VBox>
-                    </StackPane>
+                    <VBox styleClass="body">
+                        <HBox>
+                            <Label alignment="CENTER" text="a1 = "/>
+                            <JFXTextField fx:id="a1TextField">
+                                <validators>
+                                    <NumberValidator/>
+                                </validators>
+                            </JFXTextField>
+                        </HBox>
+                        <StackPane styleClass="slider">
+                            <JFXSlider fx:id="a1Slider" maxWidth="150.0" minWidth="150.0"
+                                       nodeOrientation="LEFT_TO_RIGHT">
+                                <StackPane.margin>
+                                    <Insets bottom="5.0" left="40.0"/>
+                                </StackPane.margin>
+                            </JFXSlider>
+                        </StackPane>
+                        <HBox>
+                            <Label alignment="CENTER" text="a2 = "/>
+                            <JFXTextField fx:id="a2TextField">
+                                <validators>
+                                    <NumberValidator/>
+                                </validators>
+                            </JFXTextField>
+                        </HBox>
+                        <StackPane styleClass="slider">
+                            <JFXSlider fx:id="a2Slider" maxWidth="150.0" minWidth="150.0"
+                                       nodeOrientation="LEFT_TO_RIGHT">
+                                <StackPane.margin>
+                                    <Insets left="40.0"/>
+                                </StackPane.margin>
+                            </JFXSlider>
+                        </StackPane>
+                    </VBox>
                 </VBox>
             </JFXMasonryPane>
         </left>
