--- a/src/main/resources/base.css
+++ b/src/main/resources/base.css
@@ -20,6 +20,7 @@
 .card .header {
     -fx-background-radius: 5 5 0 0;
     -fx-background-color: mediumaquamarine;
+    -fx-max-height: 35px;
 }
 
 .action-button {
