--- a/src/main/resources/model/Model.fxml
+++ b/src/main/resources/model/Model.fxml
@@ -17,7 +17,7 @@
         <left>
             <JFXMasonryPane prefWidth="250.0">
                 <VBox styleClass="card">
-                    <StackPane styleClass="header" VBox.vgrow="NEVER">
+                    <StackPane styleClass="header" VBox.vgrow="ALWAYS">
                         <Label fx:id="headerLabel" text="Параметры"/>
                     </StackPane>
                     <VBox styleClass="body">
