--- a/src/main/resources/model/Model.fxml
+++ b/src/main/resources/model/Model.fxml
@@ -184,6 +184,9 @@
                     </VBox>
 
                 </VBox>
+                <BorderPane.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                </BorderPane.margin>
             </JFXMasonryPane>
         </left>
         <center>
