--- a/src/main/resources/model/Model.fxml
+++ b/src/main/resources/model/Model.fxml
@@ -185,7 +185,7 @@
 
                 </VBox>
                 <BorderPane.margin>
-                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                    <Insets bottom="10.0" left="10.0" top="10.0"/>
                 </BorderPane.margin>
             </JFXMasonryPane>
         </left>
@@ -199,15 +199,9 @@
                         <NumberAxis fx:id="yAxis" side="LEFT"/>
                     </yAxis>
                     <StackPane.margin>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+                        <Insets bottom="15.0" right="15.0" top="15.0"/>
                     </StackPane.margin>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
-                    </padding>
                 </LineChart>
-                <BorderPane.margin>
-                    <Insets bottom="5.0" left="5.0" right="5.0" top="5.0"/>
-                </BorderPane.margin>
             </StackPane>
         </center>
     </BorderPane>
